@@ -21,18 +21,18 @@ $config['markasjunk2_ham_mbox'] = null;
 $config['markasjunk2_spam_mbox'] = null;
 
 // Mark messages as read when reporting them as spam
-$config['markasjunk2_read_spam'] = true;
+$config['markasjunk2_read_spam'] = false;
 
 // Mark messages as unread when reporting them as ham
 $config['markasjunk2_unread_ham'] = false;
 
 // Add flag to messages marked as spam (flag will be removed when marking as ham)
-// If you do not want to use message flags set this to null
+// If you do not want to use message flags set this to false
 $config['markasjunk2_spam_flag'] = 'Junk';
 
 // Add flag to messages marked as ham (flag will be removed when marking as spam)
-// If you do not want to use message flags set this to null
-$config['markasjunk2_ham_flag'] = null;
+// If you do not want to use message flags set this to false
+$config['markasjunk2_ham_flag'] = 'NonJunk';
 
 // Write output from spam/ham commands to the log for debug
 $config['markasjunk2_debug'] = false;
