@@ -11,6 +11,7 @@ Roundcube Webmail MarkAsJunk2
  * Add markasjunk2_allowed_hosts config option
  * Add markasjunk2_host_config config option
  * Pass source and destination mbox vars to driver fix save problems in edit_headers and sa_detact drivers (#58)
+ * Make flag defaults match markasjunk plugin from core (config change: to disable flagging set configs to false) (#59)
 
 Version 1.11.1 (2017-07-29, rc-1.3)
 =================================================
